# Anemoia

./: README.md  __init__.py  infer_gradio_merged.py  list_installed_versions.py  pyproject.toml
Assets/: Docs_RAG.txt  Initial_Prompt.txt  Voice_Ref_Trans.txt
src/f5_tts/infer/: README.md  infer_gradio.py  utils_infer.py
src/f5_tts/infer/Assets/: Docs_RAG.txt  Initial_Prompt.txt  Voice_Ref_Trans.txt
src/f5_tts/infer/Assets/RAG/chroma_db/: chroma.sqlite3
