[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f5-tts"
dynamic = ["version"]
description = "F5-TTS: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic==2.10.6",
    "gradio==4.44.1",
    "accelerate==1.6.0",
    "bitsandbytes==0.44.1",
    "cached_path==1.7.3",
    "click==8.1.8",
    "datasets==3.6.0",
    "ema_pytorch==0.7.7",
    "jieba==0.42.1",
    "librosa==0.11.0",
    "matplotlib==3.10.3",
    "numpy==1.26.4",
    "pydub==0.25.1",
    "pypinyin==0.54.0",
    "safetensors==0.5.3",
    "soundfile==0.13.1",
    "tomli==2.2.1",
    "torch==2.4.1+cu121",
    "torchaudio==2.4.1+cu121",
    "torchdiffeq==0.2.5",
    "tqdm==4.66.5",
    "transformers==4.51.3",
    "transformers_stream_generator==0.0.5",
    "vocos==0.1.0",
    "wandb==0.19.11",
    "x_transformers==2.3.3",
    "num2words==0.5.14",
    "faiss-cpu==1.11.0",
    "sentence-transformers==4.1.0",
]

[project.optional-dependencies]
eval = [
    "faster_whisper==0.10.1",
    "funasr",
    "jiwer",
    "modelscope",
    "zhconv",
    "zhon",
]

[project.urls]
Homepage = "https://github.com/SWivid/F5-TTS"

[project.scripts]
"f5-tts_infer-cli" = "f5_tts.infer.infer_cli:main"
"f5-tts_infer-gradio" = "f5_tts.infer.infer_gradio:main"
"f5-tts_finetune-cli" = "f5_tts.train.finetune_cli:main"
"f5-tts_finetune-gradio" = "f5_tts.train.finetune_gradio:main"